升级依赖,重写QueryPage,添加批量复制对象功能。